Adding Error State to Recipes Activity
We need a simple way for our user to refresh the list if it fails to load. We can use our loading status property with our fadeVisible binding to swap between the three states of our view, while binding our retry text to our refresh view model method

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
   <string name="app_name">Recipes</string>
 
   <string name="recipes_load_error_message">Ooops, an error occurred loading your recipes</string>
+  <string name="recipes_load_error_retry">Try Again</string>
 </resources>
